--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Coming soon
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Drop Dead Tours</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+  </head>
+
+  <body>
+    <div id="flag">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <h1>Coming soon&hellip;</h1>
+  </body>
+</html>
